--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
       username: ${DATASOURCE_USER}
       password: ${DATASOURCE_PASS}
       maximum-pool-size: 20
-    url: ${DATASOURCE_URL}
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=spring
   jpa:
     hibernate:
       ddl-auto: create-drop
